--- a/frontend/templates/themes_admin/themes_livreur/homepage_liv.html
+++ b/frontend/templates/themes_admin/themes_livreur/homepage_liv.html
@@ -118,64 +118,6 @@
 
                 </div>
                 <div class="row">
-
-
-                    <div class="dropdown d-flex notification" style="margin-left: auto;" id="notification">
-                        <a role="button" data-toggle="dropdown" data-target="#" href="">
-                            <i class="fas fa-bell"></i>
-                            <span class="badge">0</span>
-                        </a>
-
-                        <ul class="dropdown-menu notifications" role="menu" aria-labelledby="dLabel">
-
-                            <div class="notification-heading">
-                                <h4 class="menu-title">NOTIFICATIONS</h4>
-                                <h4 class="menu-title pull-right">Tout voir<i
-                                        class="glyphicon glyphicon-circle-arrow-right"></i>
-                                </h4>
-                            </div>
-                            <li class="divider"></li>
-                            <div class="notifications-wrapper">
-                                <a class="content" href="{% url 'notification_date_expired' %}">
-
-                                    <div class="notification-item">
-                                        <div class="row">
-                                            <div class="clock">
-                                                <i class="fas fa-hourglass-end"></i>
-                                            </div>
-                                            <div>
-                                                <h4 class="item-title">Date de péremption du médicament</h4>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </a>
-
-                                <li class="divider"></li>
-
-                                <a class="content" href="{% url 'notification_out_of_stock' %}">
-                                    <div class="notification-item">
-                                        <div class="row">
-                                            <div class="battery">
-                                                <i class="fas fa-battery-quarter"></i>
-                                            </div>
-                                            <div>
-                                                <h4 class="item-title">Médicaments à réapprovisionner</h4>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </a>
-
-                            </div>
-                            <li class="divider"></li>
-                            <div class="notification-footer">
-                                <h4 class="menu-title">View all<i class="glyphicon glyphicon-circle-arrow-right"></i>
-                                </h4>
-                            </div>
-                        </ul>
-
-                    </div>
-
-
                     <div class="user dropdown d-flex" id="user">
                         <a role="button" data-toggle="dropdown" data-target="#" href="">
                             <i class="fas fa-user"></i>
@@ -214,7 +156,7 @@
                                                 <i class="fas fa-edit" id="fa-edit"></i>
                                             </div>
                                             <div class="p-user">
-                                                <p>Edit Profile</p>
+                                                <p>Modifier Profile</p>
                                             </div>
                                         </div>
                                     </div>
