--- a/frontend/templates/themes_client/thankyou.html
+++ b/frontend/templates/themes_client/thankyou.html
@@ -1,4 +1,4 @@
-{% extends "themes_client/index.html" %}
+{% extends "themes_client/homepage_cli.html" %}
 {% block content %}
 {% load static %}
 <style>
@@ -12,14 +12,7 @@
 
   <div class="site-wrap">
 
-    <div class="bg-light py-3">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-12 mb-0"><a href="index.html">Acceuil</a> <span class="mx-2 mb-0">/</span> <strong
-              class="text-black">Merci</strong></div>
-        </div>
-      </div>
-    </div>
+
     
     <div class="site-section">
       <div class="container">
