--- a/frontend/templates/themes_admin/themes_gestionnaire/homepage_ges.html
+++ b/frontend/templates/themes_admin/themes_gestionnaire/homepage_ges.html
@@ -88,17 +88,12 @@
                         <div class="card-body">
                             <ul>
                                 <li><a href="{% url 'inscription' %}">Création de compte</a></li>
-                                <li><a href="{% url 'liste_ges' %}">Liste Gestionnaires</a></li>
-                                <li><a href="{% url 'liste_prepa' %}">Liste Preparateurs</a></li>
-                                <li><a href="{% url 'liste_cas' %}">Liste Caissiers</a></li>
-                                <li><a href="{% url 'liste_phar' %}">Liste Pharmaciens</a></li>
-                                <li><a href="{% url 'liste_liv' %}">Liste Livreurs</a></li>
-                                <li><a href="{% url 'liste_client' %}">Liste Clients</a></li>
+                                <li><a href="{% url 'user_list' %}">Liste des utilisateurs</a></li>
                             </ul>
                         </div>
                     </div>
                 </div>
-
+                
                 <div class="card">
                     <div class="card-header" id="headingFiveteen">
                         <h2>
