--- a/frontend/templates/themes_admin/themes_gestionnaire/user_list.html
+++ b/frontend/templates/themes_admin/themes_gestionnaire/user_list.html
@@ -6,308 +6,53 @@
     <link rel="stylesheet" href="{% static 'themes_admin/css/dataTables.bootstrap4.min.css' %}">
     <link rel="stylesheet" href="{% static 'themes_admin/css/responsive.bootstrap4.min.css' %}">
 
-    <button onclick="topFunction()" id="myBtn" title="Go to top"><i class="fas fa-arrow-up"></i></button>
+<style>
+    .div {
+        text-align: center;
+        margin: 20px auto; /* Centrage automatique des divs */
+        padding: 10px;
+        width: 50%; /* Ajustez la largeur selon vos besoins */
+        background-color: #f2f2f2; /* Couleur de fond pour les divs */
+        border-radius: 8px; /* Bords arrondis */
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Ombre pour un effet de relief */
+    }
+    
+    .div a {
+        color: #333; /* Couleur du texte */
+        text-decoration: none; /* Supprimer le soulignement des liens */
+        font-weight: bold;
+        font-size: 16px; /* Ajustez la taille du texte selon vos besoins */
+    }
+    
+    .div a:hover {
+        color: #007bff; /* Changer la couleur lors du survol */
+    }
+    
+</style>
+<div class="div">
+    <a href="{% url 'liste_ges' %}"> Liste des Gestionnaires</a>
+</div>
+<div class="div">
+    <a href="{% url 'liste_prepa' %}"> Liste des Preparateurs</a>
+</div>
 
-{% for user in gestionnaires %}
-    <div class="body-page" id="body-page">
-        <div class="user-list">
-            <div class="card">
-                <div class="card-header">
-                    <div class="d-flex justify-content-between align-items-center">
-                        Liste des Gestionnaires en Pharmacie
-                    </div>
-                </div>
-                <div class="card-body">
-                    <table id="table" class="table table-striped table-bordered dt-responsive nowrap" style="width:100%">
-                        <thead>
-                            <tr>
-                                <th scope="col">ID</th>
-                                <th scope="col">Nom</th>
-                                <th scope="col">Prenom</th>
-                                <th scope="col">Mobile</th>
-                                <th scope="col">Adresse</th>
-                                <th scope="col">Email</th>
-                                <th scope="col">Role</th>
-                                <th scope="col">Dernière connexion</th>
-                                <th scope="col">Action</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            
-                                <tr>
-                                    <th>{{ user.id }}</th>
-                                    <td>{{ user.nomUtilisateur }}</td>
-                                    <td>{{ user.prenomUtilisateur }}</td>
-                                    <td>{{ user.numeroUtilisateur }}</td>
-                                    <td>{{ user.adresseUtilisateur }}</td>
-                                    <td>{{ user.emailUtilisateur }}</td>
-                                    <td>Gestionnaire Pharmacie</td>
-                                    <td>{{ user.last_login }}</td>
-                                    <td>
-                                        <div class="row">
-                                            <a href="#"><i class="fa fa-trash" aria-hidden="true"></i></a>
-                                        </div>
-                                    </td>
-                                </tr>
-                            </tbody>
-                        </div>
-                    </table>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-{% endfor %}
-{% for user in preparateurs %}
-<div class="body-page" id="body-page">
-    <div class="user-list">
-            <div class="card">
-                <div class="card-header">
-                    <div class="d-flex justify-content-between align-items-center">
-                        Liste des Preparateurs en Pharmacie
-                    </div>
-                </div>
-                <div class="card-body">
-                    <table id="table" class="table table-striped table-bordered dt-responsive nowrap" style="width:100%">
-                        <thead>
-                            <tr>
-                                <th scope="col">ID</th>
-                                <th scope="col">Nom</th>
-                                <th scope="col">Prenom</th>
-                                <th scope="col">Mobile</th>
-                                <th scope="col">Adresse</th>
-                                <th scope="col">Email</th>
-                                <th scope="col">Role</th>
-                                <th scope="col">Dernière connexion</th>
-                                <th scope="col">Action</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            
-                                <tr>
-                                    <th>{{ user.id }}</th>
-                                    <td>{{ user.nomUtilisateur }}</td>
-                                    <td>{{ user.prenomUtilisateur }}</td>
-                                    <td>{{ user.numeroUtilisateur }}</td>
-                                    <td>{{ user.adresseUtilisateur }}</td>
-                                    <td>{{ user.emailUtilisateur }}</td>
-                                    <td>Preparateur en Pharmacie</td>
-                                    <td>{{ user.last_login }}</td>
-                                    <td>
-                                        <div class="row">
-                                            <a href="#"><i class="fa fa-trash" aria-hidden="true"></i></a>
-                                        </div>
-                                    </td>
-                                </tr>
-                            </tbody>
-                        </div>
-                    </table>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-{% endfor %}
-{% for user in caissiers %}
-<div class="body-page" id="body-page">
-    <div class="user-list">
-            <div class="card">
-                <div class="card-header">
-                    <div class="d-flex justify-content-between align-items-center">
-                        Liste des Caissiers
-                    </div>
-                </div>
-                <div class="card-body">
-                    <table id="table" class="table table-striped table-bordered dt-responsive nowrap" style="width:100%">
-                        <thead>
-                            <tr>
-                                <th scope="col">ID</th>
-                                <th scope="col">Nom</th>
-                                <th scope="col">Prenom</th>
-                                <th scope="col">Mobile</th>
-                                <th scope="col">Adresse</th>
-                                <th scope="col">Email</th>
-                                <th scope="col">Role</th>
-                                <th scope="col">Dernière connexion</th>
-                                <th scope="col">Action</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            
-                                <tr>
-                                    <th>{{ user.id }}</th>
-                                    <td>{{ user.nomUtilisateur }}</td>
-                                    <td>{{ user.prenomUtilisateur }}</td>
-                                    <td>{{ user.numeroUtilisateur }}</td>
-                                    <td>{{ user.adresseUtilisateur }}</td>
-                                    <td>{{ user.emailUtilisateur }}</td>
-                                    <td>Caissier</td>
-                                    <td>{{ user.last_login }}</td>
-                                    <td>
-                                        <div class="row">
-                                            <a href="#"><i class="fa fa-trash" aria-hidden="true"></i></a>
-                                        </div>
-                                    </td>
-                                </tr>
-                            </tbody>
-                        </div>
-                    </table>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-{% endfor %}
-{% for user in clients %}
-<div class="body-page" id="body-page">
-    <div class="user-list">
-            <div class="card">
-                <div class="card-header">
-                    <div class="d-flex justify-content-between align-items-center">
-                        Liste des Clients
-                    </div>
-                </div>
-                <div class="card-body">
-                    <table id="table" class="table table-striped table-bordered dt-responsive nowrap" style="width:100%">
-                        <thead>
-                            <tr>
-                                <th scope="col">ID</th>
-                                <th scope="col">Nom</th>
-                                <th scope="col">Prenom</th>
-                                <th scope="col">Mobile</th>
-                                <th scope="col">Adresse</th>
-                                <th scope="col">Email</th>
-                                <th scope="col">Role</th>
-                                <th scope="col">Dernière connexion</th>
-                                <th scope="col">Action</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            
-                                <tr>
-                                    <th>{{ user.id }}</th>
-                                    <td>{{ user.nomUtilisateur }}</td>
-                                    <td>{{ user.prenomUtilisateur }}</td>
-                                    <td>{{ user.numeroUtilisateur }}</td>
-                                    <td>{{ user.adresseUtilisateur }}</td>
-                                    <td>{{ user.emailUtilisateur }}</td>
-                                    <td>Client</td>
-                                    <td>{{ user.last_login }}</td>
-                                    <td>
-                                        <div class="row">
-                                            <a href="#"><i class="fa fa-trash" aria-hidden="true"></i></a>
-                                        </div>
-                                    </td>
-                                </tr>
-                            </tbody>
-                        </div>
-                    </table>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-{% endfor %}
-{% for user in pharmaciens %}
-<div class="body-page" id="body-page">
-    <div class="user-list">
-            <div class="card">
-                <div class="card-header">
-                    <div class="d-flex justify-content-between align-items-center">
-                        Liste des Pharmaciens
-                    </div>
-                </div>
-                <div class="card-body">
-                    <table id="table" class="table table-striped table-bordered dt-responsive nowrap" style="width:100%">
-                        <thead>
-                            <tr>
-                                <th scope="col">ID</th>
-                                <th scope="col">Nom</th>
-                                <th scope="col">Prenom</th>
-                                <th scope="col">Mobile</th>
-                                <th scope="col">Adresse</th>
-                                <th scope="col">Email</th>
-                                <th scope="col">Role</th>
-                                <th scope="col">Dernière connexion</th>
-                                <th scope="col">Action</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            
-                                <tr>
-                                    <th>{{ user.id }}</th>
-                                    <td>{{ user.nomUtilisateur }}</td>
-                                    <td>{{ user.prenomUtilisateur }}</td>
-                                    <td>{{ user.numeroUtilisateur }}</td>
-                                    <td>{{ user.adresseUtilisateur }}</td>
-                                    <td>{{ user.emailUtilisateur }}</td>
-                                    <td>Pharmacien</td>
-                                    <td>{{ user.last_login }}</td>
-                                    <td>
-                                        <div class="row">
-                                            <a href="#"><i class="fa fa-trash" aria-hidden="true"></i></a>
-                                        </div>
-                                    </td>
-                                </tr>
-                            </tbody>
-                        </div>
-                    </table>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-{% endfor %}
-{% for user in livreurs %}
-<div class="body-page" id="body-page">
-    <div class="user-list">
-            <div class="card">
-                <div class="card-header">
-                    <div class="d-flex justify-content-between align-items-center">
-                        Liste des Livreurs
-                    </div>
-                </div>
-                <div class="card-body">
-                    <table id="table" class="table table-striped table-bordered dt-responsive nowrap" style="width:100%">
-                        <thead>
-                            <tr>
-                                <th scope="col">ID</th>
-                                <th scope="col">Nom</th>
-                                <th scope="col">Prenom</th>
-                                <th scope="col">Mobile</th>
-                                <th scope="col">Adresse</th>
-                                <th scope="col">Email</th>
-                                <th scope="col">Role</th>
-                                <th scope="col">Dernière connexion</th>
-                                <th scope="col">Action</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            
-                                <tr>
-                                    <th>{{ user.id }}</th>
-                                    <td>{{ user.nomUtilisateur }}</td>
-                                    <td>{{ user.prenomUtilisateur }}</td>
-                                    <td>{{ user.numeroUtilisateur }}</td>
-                                    <td>{{ user.adresseUtilisateur }}</td>
-                                    <td>{{ user.emailUtilisateur }}</td>
-                                    <td>Livreur</td>
-                                    <td>{{ user.last_login }}</td>
-                                    <td>
-                                        <div class="row">
-                                            <a href="#"><i class="fa fa-trash" aria-hidden="true"></i></a>
-                                        </div>
-                                    </td>
-                                </tr>
-                            </tbody>
-                        </div>
-                    </table>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-{% endfor %}
+<div class="div">
+    <a href="{% url 'liste_phar' %}"> Liste des Pharmaciens</a>
+</div>
+
+<div class="div">
+    <a href="{% url 'liste_cas' %}"> Liste des Caissiers</a>
+</div>
+
+<div class="div">
+    <a href="{% url 'liste_liv' %}"> Liste des Livreurs</a>
+</div>
+
+<div class="div">
+    <a href="{% url 'liste_client' %}"> Liste des clients</a>
+</div>
+
+
 
     <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
     <script src="https://cdn.datatables.net/1.10.24/js/jquery.dataTables.min.js"></script>
