--- a/frontend/templates/themes_admin/themes_gestionnaire/user_list_ges.html
+++ b/frontend/templates/themes_admin/themes_gestionnaire/user_list_ges.html
@@ -7,13 +7,13 @@
     <link rel="stylesheet" href="{% static 'themes_admin/css/responsive.bootstrap4.min.css' %}">
 
     <button onclick="topFunction()" id="myBtn" title="Go to top"><i class="fas fa-arrow-up"></i></button>
-{% for user in preparateurs %}
+{% for user in gestionnaires %}
 <div class="body-page" id="body-page">
     <div class="user-list">
             <div class="card">
                 <div class="card-header">
                     <div class="d-flex justify-content-between align-items-center">
-                        Liste des Preparateurs en Pharmacie
+                        Liste des Gestionnaire de la Pharmacie
                     </div>
                     <a href="{% url 'user_list' %}"><button>Retour</button></a>
                 </div>
@@ -41,7 +41,7 @@
                                     <td>{{ user.numeroUtilisateur }}</td>
                                     <td>{{ user.adresseUtilisateur }}</td>
                                     <td>{{ user.emailUtilisateur }}</td>
-                                    <td>Preparateur en Pharmacie</td>
+                                    <td>Gestionnaire</td>
                                     <td>{{ user.last_login }}</td>
                                     <td>
                                         <div class="row">
