--- a/frontend/templates/themes_admin/themes_gestionnaire/user_list_phar.html
+++ b/frontend/templates/themes_admin/themes_gestionnaire/user_list_phar.html
@@ -15,6 +15,7 @@
                     <div class="d-flex justify-content-between align-items-center">
                         Liste des Pharmaciens
                     </div>
+                    <a href="{% url 'user_list' %}"><button>Retour</button></a>
                 </div>
                 <div class="card-body">
                     <table id="table" class="table table-striped table-bordered dt-responsive nowrap" style="width:100%">
