--- a/frontend/templates/themes_admin/themes_gestionnaire/homepage_ges.html
+++ b/frontend/templates/themes_admin/themes_gestionnaire/homepage_ges.html
@@ -293,16 +293,17 @@
             text-align: center; /* Centre le texte */
             width: 250px; /* Largeur réduite pour les cartes */
             height: 250px; /* Hauteur réduite pour les cartes */
+            gap: 10px;
         }
     
         /* Styles pour les titres dans les cartes */
         .dashboard .card h3 {
-            font-size: 25px; /* Taille de la police du titre réduite */
+            font-size: 22px; /* Taille de la police du titre réduite */
             margin-bottom: 10px; /* Espacement inférieur du titre réduit */
             color: #ffffff; /* Couleur du texte du titre */
         }
         .dashboard .card p {
-            font-size: 15px; /* Taille de la police du titre réduite */
+            font-size: 12px; /* Taille de la police du titre réduite */
             margin-bottom: 10px; /* Espacement inférieur du titre réduit */
             color: #ffffff; /* Couleur du texte du titre */
         }
@@ -400,7 +401,7 @@
             <div class="col">
                 <div class="card card-4">
                     <h3>Rapports Financiers</h3>
-                    <div class="number">$10,000</div> <!-- Remplacer avec les données dynamiques -->
+                    <div class="number">30 000 FCFA</div> <!-- Remplacer avec les données dynamiques -->
                     <p>Revenus, dépenses, marges bénéficiaires.</p>
                 </div>
             </div>
