problème du caissier réglé

--- a/frontend/templates/themes_admin/themes_caissier/commande_liste.html
+++ b/frontend/templates/themes_admin/themes_caissier/commande_liste.html
@@ -120,7 +120,7 @@
             <tr>
                 <td>{{ selection.id }}</td>
                 <td>{{ selection.dateCreation }}</td>
-                <td>{{ selection.recuperer_prix_total }}</td>
+                <td>{{ selection.prixTotal }}</td>
                 <td>{{ selection.statut }}</td>
                 <td>
                     <button class="btn btn-info" data-toggle="modal" data-target="#detailsModal-{{ selection.id }}">Détails</button>
